Fixed Spacing between ancestor path buttons on Linux(#106)

--- a/chrome/skin/classic/linux/inspector.css
+++ b/chrome/skin/classic/linux/inspector.css
@@ -2,3 +2,11 @@
 
 /******************************************************************************/
 /* Inspector Styles for Linux */
+
+.theme-firebug .breadcrumbs-widget-item {
+	padding: 2px;
+}
+
+.theme-firebug .breadcrumbs-widget-item:not(:first-child)::before {
+	margin: 0 5px 0 -5px;
+}
